2006-07-06  Rodney Dawes  <dobey@novell.com>

	* 24x24/apps/Makefile.am:
	* 48x48/apps/Makefile.am:
	Update for removed icons

	* scalable/emblems/Makefile.am:
	Add emblem-symbolic-link back now that it exists

2006-07-06  Rodney Dawes  <dobey@novell.com>

        * */apps/beep-media-player.*:
        * */apps/burner.*:
        Remove these icons

        * 24x24/apps/gnome-shutdown.xcf.bz2:
        This 24x24 icon is generated from the 22x22 now

        * 48x48/apps/file-roller.*:
        Don't need to ship the same icon as the app, in the theme, and the
        icon should be shipped with the app anyway

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 24x24/mimetypes/application-x-executable.png,
	scalable/emblems/emblem-symbolic-link.svg,
	scalable/status/dialog-info.svg: missed these files

2006-07-06  Rodney Dawes  <dobey@novell.com>

	* */emblems/Makefile.am: Add missing rule to run the icon-name-mapping
	script for all the emblem icons

	Fixes #346306

2006-07-06  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Add 32x32 to SUBDIRS

	* configure.in: Add 32x32/apps and 32x32/places

	* */apps/utilities-system-monitor.*: Add better drawn icons from Lapo

	* 24x24/mimetypes/application-x-executable.png: Actually add the icon

	* 32x32/Makefile.am: Add apps to SUBDIRS

	* 32x32/devices/Makefile.am: Remove video-display as it's missing

	* 32x32/places/Makefile.am: Replace svg extensions with png

	* scalable/emblems/Makefile.am: emblem-symbolic-link not here

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 32x32/devices: add in 32x32

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* emblem-symbolic-link: in all sizes, tango style

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 24x24/mimetypes/application-x-executable.png: was missing for some reason

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* template/: removing outdated template

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 32x32/places/folder-remote
	* 32x32/places/folder-saved-search