@@ -1,0 +1,2 @@
+[Icon Data]
+AttachPoints=70,700|700,700|700,70|70,70
